src/test/ui/type-alias-impl-trait/bound_reduction2.stderr
error[E0277]: the trait bound `T: TraitWithAssoc` is not satisfied
  --> $DIR/bound_reduction2.rs:10:1
   |
LL | type Foo<V> = impl Trait<V>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TraitWithAssoc` is not implemented for `T`
   |
help: consider further restricting this bound
   |
LL | fn foo_desugared<T: TraitWithAssoc + TraitWithAssoc>(_: T) -> Foo<T::Assoc> {
   |                                    ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
